--- a/cowork_project_management_flow/views/cowork_purchase_order_line.xml
+++ b/cowork_project_management_flow/views/cowork_purchase_order_line.xml
@@ -9,6 +9,8 @@
                     <div class="oe_button_box" name="button_box">
                     </div>
                     <group>
+                        <field name="categ_class_id" readonly="1"/>
+                        <field name="class_id" readonly="1"/>
                         <field name="order_id"/>
                         <field name="categ_id"/>
                         <field name="product_id"/>
@@ -35,10 +37,12 @@
         <field name="model">cowork.purchase.order.line</field>
         <field name="arch" type="xml">
             <tree string="申购单明细" default_order="write_date desc" create="0" editable="bottom">
+                <field name="categ_class_id" readonly="1"/>
+                <field name="class_id" readonly="1"/>
                 <field name="project_id" readonly="1"/>
-                <field name="order_id" readonly="1" options="{'bg_color':'SpringGreen:purchase_id==False'}"/>
-                <field name="categ_id" attrs="{'readonly': [('state', '!=', 'draft')]}" options="{'bg_color':'SpringGreen:purchase_id==False'}"/>
-                <field name="product_id" attrs="{'readonly': [('state', '!=', 'draft')]}" options="{'bg_color':'SpringGreen:purchase_id==False'}"/>
+                <field name="order_id" readonly="1"/>
+                <field name="categ_id" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                <field name="product_id" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                 <field name="product_qty" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                 <field name="uom_id" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                 <field name="material" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
@@ -70,6 +74,8 @@
                 <field name="type_id"/>
                 <field name="brand_id"/>
                 <field name="partner_id"/>
+                <field name="categ_class_id"/>
+                <field name="class_id"/>
                 <field name="comment" filter_domain="[('comment','ilike',self)]"/>
                 <filter string="询价中" name="quoteing" domain="[('purchase_id', '!=', False)]"/>
                 <filter string="待询价" name="to_quote" domain="[('purchase_id', '=', False)]"/>
@@ -80,14 +86,38 @@
                 <filter name="type_id" string="类型" context="{'group_by':'type_id'}"/>
                 <filter name="brand_id" string="品牌" context="{'group_by':'brand_id'}"/>
                 <filter name="partner_id" string="供应商" context="{'group_by':'partner_id'}"/>
+                <filter name="categ_class_id" string="分类" context="{'group_by':'categ_class_id'}"/>
+                <filter name="class_id" string="分类项目" context="{'group_by':'class_id'}"/>
             </search>
         </field>
+    </record>
+    <record id="graph_cowork_purchase_order_line" model="ir.ui.view">
+         <field name="name">申购单明细graph</field>
+         <field name="model">cowork.purchase.order.line</field>
+         <field name="arch" type="xml">
+             <graph string="申购单明细" type="line">
+                 <field name="product_id" type="row"/>
+                 <field name="amount" type="measure"/>
+             </graph>
+         </field>
+    </record>
+    <record id="pivot_cowork_purchase_order_line" model="ir.ui.view">
+         <field name="name">申购单明细pivot</field>
+         <field name="model">cowork.purchase.order.line</field>
+         <field name="arch" type="xml">
+             <pivot string="申购单明细" disable_linking="True">
+                 <field name="amount" type="col"/>
+                 <field name="product_id"  type="row"/>
+                 <field name="amount" type="measure"/>
+                 <!-- <field name="amount"/> -->
+             </pivot>
+         </field>
     </record>
 
     <record model="ir.actions.act_window" id="action_cowork_purchase_order_line">
         <field name="name">申购单明细</field>
         <field name="res_model">cowork.purchase.order.line</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,graph,pivot</field>
         <field name="context">{'search_default_categ_id_group':1}</field>
     </record>
 
