--- a/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
+++ b/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
@@ -20,6 +20,7 @@
                     </h1>
                     <group>
                         <field name="apply_id" readonly="1"/>
+                        <field name="date_deliver"/>
                         <field name="title" readonly="1"/>
                         <field name="user_id" attrs="{'readonly': [('state', '=', 'business')]}"/>
                         <field name="date_fill" attrs="{'readonly': [('state', '=', 'business')]}"/>
@@ -35,7 +36,7 @@
                                 <field name="count_day"/>
                                 <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                                 <field name="total_hours"/>
-                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
                                 <field name="currency_id" invisible="1"/>
                             </tree>
                         </field>
@@ -46,7 +47,7 @@
                         <field name="material_cost_lines" nolabel="1" attrs="{'readonly': [('state', '=', 'business')]}">
                             <tree editable="bottom">
                                 <field name="material_categ_id" required="1" options="{'no_create_edit': True}"/>
-                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
                                 <field name="currency_id" invisible="1"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_details" string="编辑物料" attrs="{'invisible': [('state', '=', 'business')]}"/>
@@ -61,7 +62,7 @@
                                 <field name="class_id"/>
                                 <field name="unit_cost"/>
                                 <field name="count"/>
-                                <field name="total_cost"/>
+                                <field name="total_cost" sum="Total"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_spare_parts" string="编辑组件" attrs="{'invisible': [('state', '=', 'business')]}"/>
                             </tree>
