--- a/cowork_project_management_flow/views/cowork_project_estimate.xml
+++ b/cowork_project_management_flow/views/cowork_project_estimate.xml
@@ -34,6 +34,7 @@
                         <field name="date_of_acceptance" readonly="1"/>
                         <field name="user_id" attrs="{'readonly': [('state', '=', 'general')]}"/>
                         <field name="apply_id" readonly="1"/>
+                        <field name="date_deliver"/>
                         <field name="preliminary_scheme_id" attrs="{'invisible':[('preliminary_scheme_id','=',False)],'readonly': [('state', '=', 'general')]}"/>
                     </group>
                     <group string="业务信息">
